# blog-hakyll

./: .gitignore  .travis.yml  Makefile  README.md  blog.cabal  blog.nix  default.nix  elm-mdc.js  elm.json  index.html  main.js  package.json  package.yaml  release.nix  site.hs  stack.yaml  webpack.config.js
app/: Main.hs
csl/: chicago-author-date.csl  chinese-gb7714-2005-author-date.csl
css/: default.css  default.scss
js/: main.js
posts/: 2018-05-20-cabal-vs-stack-vs-nix.html  2018-05-20-cabal-vs-stack-vs-nix.md  2018-05-21-build-haskell-project-with-nix.html  2018-05-21-build-haskell-project-with-nix.md  2018-05-21-deploy-github-pages-by-travis-ci.html  2018-05-21-deploy-github-pages-by-travis-ci.md  2018-05-25-east-asian-line-breaks-in-hakyll.html  2018-05-25-east-asian-line-breaks-in-hakyll.md  2018-05-26-deep-learning-qa.html  2018-05-26-deep-learning-qa.md  2018-05-26-pandoc-citeproc-and-pandoc-crossref-in-hakyll.html  2018-05-26-pandoc-citeproc-and-pandoc-crossref-in-hakyll.md  2018-05-27-softmax-in-deep-learning.html  2018-05-27-softmax-in-deep-learning.md  2018-05-29-Dropout-as-a-Bayesian-Approximation-Insights-and-Applications.html  2018-05-29-Dropout-as-a-Bayesian-Approximation-Insights-and-Applications.md  2018-06-02-deep-learning-goodfellow2016.html  2018-06-02-deep-learning-goodfellow2016.md  2018-06-02-tex-notes.html  2018-06-02-tex-notes.md  2018-07-29-Understanding-LSTMs.html  2018-07-29-Understanding-LSTMs.md  2018-08-11-GBDT.html  2018-08-11-GBDT.md  2018-08-19-SVM.html  2018-08-19-SVM.md  2018-08-19-decision-tree.html  (+15 more)
references/: all.bib
(+28 files in other folders)
