name:               blog
version:            0.1.0
author:             Kai Zhang
maintainer:         kaizhang91@foxmail.com
copyright:          Kai Zhang
license:            BSD3
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.10.*
                  , pandoc == 2.0.*
                  , pandoc-citeproc >= 0.12
                  , pandoc-crossref == 0.3.0.*
                  , pandoc-types >= 1.17
  ghc-options:      -threaded
  default-language: Haskell2010